* Add transactional test * Extract common module * Add HotRod test